# MuseumPapa

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  pyproject.toml  testgame.html  vercel.json
admin/: panel.html
api/: cards.mjs  overrides.js  overrides.mjs
audit/: attractions.html  audit.html  audit_review.html  data_quality.html  duplicates.html  gaps.html  index.html  libraries.html  lineage.html  passes.html  policies.html  schema.html
backup/: .gitignore  CLAUDE.md  add_distance.py  add_hours_booking.py  availability.json  bpl_availability.json  bpl_id_map.py  bpl_pass_format.py  build.py  build_slug_map.py  hours-booking.json  library-benefits.html  library-data.json  pass_format.json  refresh.command  scrape_availability.py  scrape_bpl_availability.py  scrape_pass_format.py  slug_map.py  update_data.py
config/: branch_seeds.json  library_residency.json  library_seeds.json  manual_overrides.json  town_zips.json
coupon-map/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
data/: us_holidays.json
docs/: BRD.md  DATA_GAPS.md  LESSONS.md  glossary.md  plan_source_block_extraction.md
scripts/: archive_legacy.py  audit_data.py  build.py  build_all.py  build_assabet_classifications.py  build_attractions_index.py  build_audit_site.py  build_branches.py  build_testgame.py  crawl_subpages.py  enqueue_coupons.py  extract_attractions.py  extract_coupons.py  extract_source_blocks.py  fetch_attraction_price_pages.py  fetch_library_pages.py  geocode_all.py  serve_admin.py  (+17 more)
(+8930 files in other folders)
