[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "malibbene"
version = "0.1.0"
description = "MA Library Benefits data collection — scrapers for NorthShore library museum-pass programs"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
browser = ["playwright>=1.40"]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]
